--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,22 @@
         <item>Sweet</item>
         <item>Other</item>
     </string-array>
+    <string-array name="workout_category_possible">
+        <item>Chest</item>
+        <item>Legs</item>
+        <item>Shoulders</item>
+        <item>Abs</item>
+        <item>Arms</item>
+        <item>Beck</item>
+        <item>Other</item>
+    </string-array>
+    <string name="title_activity_update_workout_page">UpdateWorkoutPage</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
